--- a/correct_html.ipynb
+++ b/correct_html.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,13 @@
     "\n",
     "# define all index.html files, that need to be corrected\n",
     "index_path = ['index.html',\n",
-    "                'categories/index.html',\n",
+    "                'categories/index.html'\n",
     "                'page/index.html',\n",
     "                'page/page/1/index.html',\n",
     "                'page/about/index.html',\n",
-    "                'requirements/index.html',\n",
     "                'post/my-first-post/index.html',\n",
-    "                'post/page/1/index.html',\n",
     "                'post/summaries/index.html'\n",
+    "                'requirements/index.html'\n",
     "                ]\n",
     "\n",
     "# define a dictionary with {wrong string: correct string}\n",
@@ -45,25 +44,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "732353d8c7642473d8e734bee2a89f0938162f699c438dc9a11d7081b1712ce3"
-  },
-  "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit (system)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "name": "python"
   },
   "orig_nbformat": 4
  },
